--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppContext-1af69471-3e29-4015-94eb-f359ff13a41d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
